tests/invalid/overloading.err_exp
overloading.m:057: In clause for predicate `p'/4:
overloading.m:057:   in unification of variable `OptInfo'
overloading.m:057:   and term `opt_info(MustHaveOwnSlot, EverOnStack,
overloading.m:057:   CurIntervalId, V_22, Counter1, StartMap0, EndMap0,
overloading.m:057:   VarsMap0, SuccMap0)':
overloading.m:057:   type error in argument of functor `opt_info'/9.
overloading.m:057:   Argument 3 (CurIntervalId) has type
overloading.m:057:     overloading.interval_id,
overloading.m:057:   expected type was
overloading.m:057:     tree234.tree234(
overloading.m:057:       term.var(term.generic),
overloading.m:057:       tree234.tree234(overloading.goal_path, string)
overloading.m:057:     ).
